# advanced_c

./: .gitignore  CMakeLists.txt  README.md  a.out  main.c
.github/workflows/: ci.yaml  ci_hw_2.yaml  ci_hw_3.yaml
database/: CMakeLists.txt  io.c  io.h  structure.h
hw-2/: .gitignore  CMakeLists.txt  main.cpp
hw-2/.github/workflows/: ci.yaml
hw-2/database/: io.cpp  io.h
hw-2/lib/: matrix.cpp  matrix.h  vector.cpp  vector.h
hw-2/linters/: run.sh
hw-2/tests/: CMakeLists.txt  matrix_tests.cpp  vector_tests.cpp
hw-3/: .gitignore  CMakeLists.txt  base_test_set.cpp
hw-3/include/: set.h
hw-3/tests/: test.cpp
linters/: run.sh
task/: CMakeLists.txt  task.c  task.h
tests/: CMakeLists.txt  tests.cpp
